tt-irc.css
/* ... */
ul.sub-tabs {
	list-style-type : none;
	margin : 0px;
	padding : 0px;
}

#content {
	background : #c0d8ff;
	border-width : 1px;
	border-style : solid;
	border-color : #88b0f0;
	top : 25px;
	right : 5px;
	left : 155px;
	position : absolute;
	bottom : 5px;
	word-wrap : break-word;
}

#topic {
	position : absolute;
	top : 0px;
	left : 5px;
	height : 25px;
	right : 155px;
	text-align : center;
	padding : 5px 0px 5px 0px;
}

#topic #topic-input {
	border-width : 0px;
	padding : 0px;
	width : 100%;
	height : 20px;
	margin : 0px;
	padding-top : 2px;
	font-size : 14px;
	text-indent : 5px;
	text-align : left;
	cursor : pointer;
	overflow : hidden;
	white-space : nowrap;	
}

#topic #topic-input-real {
	border-width : 0px;
	padding : 0px;
	width : 100%;
	height : 20px;
	margin : 0px;
	padding-top : 2px;
	font-size : 14px;
	text-indent : 5px;
}

#topic #topic-input img {
	max-height : 16px;
	height : auto;
	width : auto;
}

#topic #topic-input.disabled {
	background : #f0f0f0;
	color : gray;
}

#topic div.wrapper {
	border : 1px solid #88b0f0;
	padding-right : 1px;
	background : white;
}

#log {	
	border-width : 1px;
	border-color : #88b0f0;
	border-style : solid;
	background : white;
	position : absolute;
	top : 35px;
	right : 155px;
	left : 5px;
	bottom : 35px;
	overflow : auto;
}

#log a {
	color : #4684ff;
}

#log a:hover {
	color : black;
}

#userlist {
	margin-top : 5px;
	font-size : 12px;
}

#userlist img {
	vertical-align : middle;
}

#log-inner {
	padding : 5px;
}

#userlist-inner {
}

#debug_output {
	position : absolute;
	width : 400px;
	height : 200px;
	right : 20px;
	bottom : 20px;
	z-index : 999;
	background-color : white;
	border : 1px solid #c0c0c0;
	overflow : auto;
	margin : 0px;
	padding : 0px;
	list-style-type : none;
}

#debug_output li {
	margin : 0px;
	padding : 0px;
	font-size : 11px;
}

#dialog_overlay {
	left : 0;
	top : 0;
	height : 100%;
	width : 100%;
	z-index : 4;
	position : absolute;
	background-image : url("images/shadow_white.png");
}

#overlay {
	background : white;
	left : 0;
	top : 0;
	height : 100%;
	width : 100%;
	z-index : 100;
	position : absolute;
}

#overlay_inner {
	font-weight : bold;
	margin : 10px;
}

div#errorBox div#xebBtn {
	text-align : center;
	clear : both;
	margin-bottom : 5px;
}

div#errorBox div#xebTitle {
	background-color : #ff0000;
	color : white;
	padding : 4px 2px 4px 10px;
	color : white;
	font-weight : bold;
	font-size : 12px;
}

div#errorBox div#xebContent {
	font-size : 12px;
	padding : 10px;
}

div#errorBox textarea {
	width : 100%;
	height : 100px;
}

div#errorBox input {
	margin-bottom : 10px;
}

#infoBoxTitle {
	border-width : 0px 0px 1px 0px;
	border-style : solid;
	border-color : #659a4c;
	background-color : #99d67a;
	padding : 4px 2px 4px 10px;
	color : white;
	font-weight : bold;
	font-size : 16px;
	text-shadow : #659a4c 0px 1px 0px;
}

#infoBox {	
	border-width : 1px 1px 1px 1px;
	border-style : solid;
	border-color : #659a4c;
	background-color : #f8fcf5;
	overflow : hidden;
	left : 25%;
	top : 50px;
	width : 50%;
	position : absolute;
	min-width : 600px;
	z-index : 5;
	box-shadow : 2px 2px 4px #c0c0c0;

}

div#errorBox {
	background-color : #ffcccc;
	border : 1px solid #ff0000;
	font-size : 12px;
	overflow : hidden;
	left : 25%;
	top : 50px;
	width : 50%;
	position : absolute;
	min-width : 600px;
	z-index : 10;
	box-shadow : 2px 2px 4px #c0c0c0;
}

div.infoBoxContents {
	padding : 10px;
	margin-bottom : 5px;
	font-size : 12px;
}

div.infoBoxContents td {
	font-size : 12px;
}

div.infoBoxContents a {
	color : #527040;
}

div.infoBoxContents a:hover {
	color : black;
}

pre {
	margin : 5px;
}

#log ul#log-list {
  list-style-type : none;
  margin : 0px;
  padding : 0px;
}  

#log span.timestamp {
	color : gray;
}

#log span.pvt-sender, #log span.pvt-sender-out {
	color : black;
}

/* #log span.pvt-sender:before {
	content: "-";
	color : green;
}

#log span.pvt-sender:after {
	content: "-";
	color : green;
}

#log span.pvt-sender-out:before {
	color : green;
	content: ">";
}

#log span.pvt-sender-out:after {
	color : green;
	content: "<";
} */

#log span.sender {
	color : green;
}

/* #log span.sender:before {
	content: "<";
	color : blue;
}

#log span.sender:after {
	content: ">";
	color : blue;
} */

#log .lt, #log .gt {
	color : blue;
}

#log span.message {
	color : black;
	white-space : pre-wrap;
}

#log span.sys-message {
	color : #88b0f0;
}

#log span.action {
	color : gray;
}

ul#userlist-list {
	list-style-type : none;
	margin : 0px;
	padding : 0px;
	white-space : nowrap;
}

ul#userlist-list li {
	cursor : pointer;
}

ul#userlist-list li:hover {
	color : #4684ff;
}

.even, .even td {
	border-width : 0px 0px 1px 0px;
	border-style : solid;
	border-color : #c0c0c0;
	background-color : #f0f0f0;
	border-collapse : collapse;
	padding : 2px 5px 2px 5px;
}

.odd, .odd td {
	border-width : 0px 0px 1px 0px;
	border-style : solid;
	border-color : #c0c0c0;
	border-collapse : collapse;
	padding : 2px 5px 2px 5px;
}

.evenSelected, .evenSelected td, .evenHL {
	background-color : #fff7d5;
	border-style : solid;
	border-color : #e7d796;
	border-width : 0px 0px 1px 0px;
	border-collapse : collapse;
	padding : 2px 5px 2px 5px;
}

.oddSelected, .oddSelected td, .oddHL {
	background-color : #fff7d5;
	border-style : solid;
	border-color : #e7d796;
	border-width : 0px 0px 1px 0px;
	border-collapse : collapse;
	padding : 2px 5px 2px 5px;
}

#userlist-list li.odd, #userlist-list li.even, #userlist-list li.evenHL,
	#userlist-list li.oddHL {
	border-color : transparent;
	background : transparent;
}

div.dlgSec {
	font-size : 12px;
	color : gray;
	font-weight : bold;
	clear : both;
	height : 20px;
}

div.dlgSecCont {
	position : relative;
	left : 150px;
	top : -20px;
	float : left;
	font-size : 12px;
	font-weight : normal;
	line-height : 200%;
}

div.dlgButtons {
	text-align : right;
	clear : both;
}
/* ... */

